# pybind11_log

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
include/: pybind11_log.h
tests/: log_test.py  pybind11_log_test.cpp
